Archive2/ef/3b7a037710f1d5/output
main.cpp: In function 'int main()':
main.cpp:18:22: error: no matching function for call to 'add(int [4])'
     cout << add(array);
                      ^
main.cpp:18:22: note: candidate is:
main.cpp:5:25: note: template<long unsigned int N> int add(int*)
 template <size_t N> int add(int (array)[N]) 
                         ^
main.cpp:5:25: note:   template argument deduction/substitution failed:
main.cpp:18:22: note:   couldn't deduce template parameter 'N'
     cout << add(array);
                      ^
